Add paper draft and biblio

--- a/manuscript/paper.bib
+++ b/manuscript/paper.bib
@@ -1,72 +1,55 @@
-@incollection{Black:2008,
-  title={Directed acyclic word graph},
-  booktitle={Dictionary of algorithms and data structures},
-  editor={Black, Paul E. and Pieterse, Vreda},
-  year={1998},
-  address={Gaithersburg},
-  Publisher={{National Institute of Standards and Technology}}
+@book{Bailey:1990,
+  title={The elements of stochastic processes with applications to the natural sciences},
+  author={Bailey, Norman T.J.},
+  year={1964},
+  publisher={John Wiley \& Soins},
+  address={New York, London, Sydney}
 }
 
-@incollection{Crochemore:1997,
-  title={On compact directed acyclic word graphs},
-  author={Crochemore, Maxime and V{\'e}rin, Renaud},
-  booktitle={Structures in Logic and Computer Science},
-  pages={192--211},
-  year={1997},
-  publisher={Springer}
+@article {Foote:1999,
+  author = {Foote, Mike and Hunter, John P. and Janis, Christine M. and Sepkoski, J. John},
+  title = {Evolutionary and Preservational Constraints on Origins of Biologic Groups: Divergence Times of Eutherian Mammals},
+  volume = {283},
+  number = {5406},
+  pages = {1310--1314},
+  year = {1999},
+  doi = {10.1126/science.283.5406.1310},
+  publisher = {American Association for the Advancement of Science},
+  issn = {0036-8075},
+  URL = {https://science.sciencemag.org/content/283/5406/1310},
+  eprint = {https://science.sciencemag.org/content/283/5406/1310.full.pdf},
+  journal = {Science}
 }
 
-@article{Blumer:1985,
-  title={The smallest automation recognizing the subwords of a text},
-  author={Blumer, Anselm C. and Blumer, Janet A. and Haussler, David and Ehrenfeucht, Andrzej and Chen, Mu-Tian and Seiferas, Joel I.},
-  journal={Theoretical computer science},
-  volume={40},
-  pages={31--55},
-  year={1985},
-  publisher={Elsevier},
-  doi={10.1016/0304-3975(85)90157-4}
+@book{Harmon:2019,
+  author={Harmon, Luke J.},
+  title={Phylogenetic Comparative Methods},
+  year={2019},
+  eprint={https://lukejharmon.github.io/pcm/pdf/phylogeneticComparativeMethods.pdf},
+  publisher={University of Idaho}
 }
 
-@article{Ciura:2001,
-  title={How to squeeze a lexicon},
-  author={Ciura, Marcin G and Deorowicz, Sebastian},
-  journal={Software: Practice and Experience},
-  volume={31},
-  number={11},
-  pages={1077--1090},
-  year={2001},
-  publisher={Wiley Online Library},
-  doi={10.1002/spe.402}
+@article{Stadler:2011,
+    author = {Stadler, Tanja},
+    title = {Simulating Trees with a Fixed Number of Extant Species},
+    journal = {Systematic Biology},
+    volume = {60},
+    number = {5},
+    pages = {676-684},
+    year = {2011},
+    month = {04},
+    issn = {1063-5157},
+    doi = {10.1093/sysbio/syr029},
+    url = {https://doi.org/10.1093/sysbio/syr029},
+    eprint = {https://academic.oup.com/sysbio/article-pdf/60/5/676/24555938/syr029.pdf},
 }
 
-@article{Daciuk:2000,
-  title={Incremental construction of minimal acyclic finite-state automata},
-  author={Daciuk, Jan and Mihov, Stoyan and Watson, Bruce W and Watson, Richard E},
-  journal={Computational linguistics},
-  volume={26},
-  number={1},
-  pages={3--16},
-  year={2000},
-  publisher={MIT Press}
+@electronic{Noutahi:2017,
+  author = {Noutahi, Marc-Rolland},
+  title = {How to simulate a phylogenetic tree?},
+  url = {https://mrnoutahi.com/2017/12/05/How-to-simulate-a-tree/},
+  year={2017},
+  urldate={02.04.2020},
+  originalyear={05.12.2017},
 }
 
-@article{Lucchesi:1993,
-  title={Applications of finite automata representing large vocabularies},
-  author={Lucchesi, Cl{\'a}udio L and Kowaltowski, Tomasz},
-  journal={Software: Practice and Experience},
-  volume={23},
-  number={1},
-  pages={15--30},
-  year={1993},
-  publisher={Wiley Online Library},
-  doi={10.1002/spe.4380230103}
-}
-
-@electronic{Havon:2011,
- author = {Havon, Steve},
- title = {Compressing dictionaries with a DAWG},
- url = {http://stevehanov.ca/blog/?id=115},
- year={2011},
- urldate = {11.12.2019},
- originalyear = {10.02.2011}
-}
