Improve manuscript for C&A

--- a/manuscript/paper.bib
+++ b/manuscript/paper.bib
@@ -53,3 +53,20 @@
   originalyear={05.12.2017},
 }
 
+@article{ete2016,
+    author = {Huerta-Cepas, Jaime and Serra, François and Bork, Peer},
+    title = "{ETE 3: Reconstruction, Analysis, and Visualization of Phylogenomic Data}",
+    journal = {Molecular Biology and Evolution},
+    volume = {33},
+    number = {6},
+    pages = {1635-1638},
+    year = {2016},
+    month = {02},
+    abstract = "{ The Environment for Tree Exploration (ETE) is a computational framework that simplifies the reconstruction, analysis, and visualization of phylogenetic trees and multiple sequence alignments. Here, we present ETE v3, featuring numerous improvements in the underlying library of methods, and providing a novel set of standalone tools to perform common tasks in comparative genomics and phylogenetics. The new features include (i) building gene-based and supermatrix-based phylogenies using a single command, (ii) testing and visualizing evolutionary models, (iii) calculating distances between trees of different size or including duplications, and (iv) providing seamless integration with the NCBI taxonomy database. ETE is freely available at http://etetoolkit.org}",
+    issn = {0737-4038},
+    doi = {10.1093/molbev/msw046},
+    url = {https://doi.org/10.1093/molbev/msw046},
+    eprint = {https://academic.oup.com/mbe/article-pdf/33/6/1635/7953632/msw046.pdf},
+}
+
+
