Update manuscript for initial revision

--- a/manuscript/paper.bib
+++ b/manuscript/paper.bib
@@ -53,7 +53,7 @@
   originalyear={05.12.2017},
 }
 
-@article{ete2016,
+@article{ETE:2016,
     author = {Huerta-Cepas, Jaime and Serra, François and Bork, Peer},
     title = "{ETE 3: Reconstruction, Analysis, and Visualization of Phylogenomic Data}",
     journal = {Molecular Biology and Evolution},
@@ -69,4 +69,24 @@
     eprint = {https://academic.oup.com/mbe/article-pdf/33/6/1635/7953632/msw046.pdf},
 }
 
+@article{Bouckaert:2012,
+  title={Mapping the origins and expansion of the Indo-European language family},
+  author={Bouckaert, Remco and Lemey, Philippe and Dunn, Michael and Greenhill, Simon J and Alekseyenko, Alexander V and Drummond, Alexei J and Gray, Russell D and Suchard, Marc A and Atkinson, Quentin D},
+  journal={Science},
+  volume={337},
+  number={6097},
+  pages={957--960},
+  year={2012},
+  publisher={American Association for the Advancement of Science}
+}
+
+@article{Robinson:2016,
+  title={The Digital Revolution in Scholarly Editing},
+  author={Robinson, Peter},
+  journal={Ars Edendi Lecture Series},
+  volume={4},
+  pages={181--207},
+  year={2016},
+  publisher={IV}
+}
 
