Update paper for C&A

--- a/manuscript/paper.bib
+++ b/manuscript/paper.bib
@@ -90,3 +90,24 @@
   publisher={IV}
 }
 
+@article{Pennell:2014,
+    title = {geiger v2.0: an expanded suite of methods for fitting
+      macroevolutionary models to phylogenetic trees},
+    author = {MW Pennell and JM Eastman and GJ Slater and JW Brown and
+      JC Uyeda and RG FitzJohn and ME Alfaro and LJ Harmon},
+    journal = {Bioinformatics},
+    year = {2014},
+    volume = {30},
+    pages = {2216-2218},
+  }
+  
+@Article{Paradis:2018,
+    title = {ape 5.0: an environment for modern phylogenetics and
+      evolutionary analyses in {R}},
+    author = {E. Paradis and K. Schliep},
+    journal = {Bioinformatics},
+    year = {2018},
+    volume = {35},
+    pages = {526-528},
+  }
+
