Implement bad sampling simulation

--- a/manuscript/paper.bib
+++ b/manuscript/paper.bib
@@ -111,3 +111,13 @@
     pages = {526-528},
   }
 
+@article{Maurits:2017,
+  title={BEASTling: A software tool for linguistic phylogenetics using BEAST 2},
+  author={Maurits, Luke and Forkel, Robert and Kaiping, Gereon A and Atkinson, Quentin D},
+  journal={PloS One},
+  volume={12},
+  number={8},
+  year={2017},
+  publisher={Public Library of Science}
+}
+
